// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader Snapshots with a title matches snapshot 1`] = `
<header
  class="PageHeader PageHeader--brown PageHeader--defaultHeight"
>
  <div
    class="PageHeader-background"
  >
    <img
      alt="Background icon"
      class="PageHeader-media"
      src="http://image.com"
    />
  </div>
   
  <!---->
   
  <div
    class="PageHeader-text"
  >
    <div
      class="PageHeader-decorativeHeader"
    />
     
    <div
      class="PageHeader-titleHeader"
    />
  </div>
   
  <!---->
</header>
`;

exports[`PageHeader Snapshots with inline svg matches snapshot 1`] = `
<header
  class="PageHeader PageHeader--brown PageHeader--defaultHeight"
>
  <!---->
   
  <div
    class="PageHeader-background"
  >
    <div
      class="PageHeader-media"
    >
      <svg>
        <g>
          <path />
        </g>
      </svg>
    </div>
  </div>
   
  <div
    class="PageHeader-text"
  >
    <div
      class="PageHeader-decorativeHeader"
    />
     
    <div
      class="PageHeader-titleHeader"
    />
  </div>
   
  <!---->
</header>
`;

exports[`PageHeader Snapshots without a title matches snapshot 1`] = `
<header
  class="PageHeader PageHeader--brown PageHeader--defaultHeight"
>
  <div
    class="PageHeader-background"
  >
    <img
      alt="Background icon"
      class="PageHeader-media"
      src="http://image.com"
    />
  </div>
   
  <!---->
   
  <div
    class="PageHeader-text"
  >
    <div
      class="PageHeader-decorativeHeader"
    />
     
    <div
      class="PageHeader-titleHeader"
    />
  </div>
   
  <!---->
</header>
`;
